[gd_scene load_steps=3 format=3 uid="uid://c4ow2gn717nu"]

[ext_resource type="Script" path="res://Scripts/generador_enemigos.gd" id="1_87ijc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3fy7"]
size = Vector2(921.215, 80.7186)

[node name="GeneradorEnemigos" type="Area2D"]
position = Vector2(582, 66)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_87ijc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(1.24618, 1.36276)
shape = SubResource("RectangleShape2D_s3fy7")

[node name="cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 2.5

[connection signal="aumentarEnemigos" from="." to="." method="_on_aumentar_enemigos"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
